--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html><head><title>About page</title><link rel= "stylesheet" href= "style.css"></head><body><h1>Hello, About us here</h1></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>About page</title>
+    <style>
+      body {
+        background-color: red;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Hello, About us here</h1>
+  </body>
+</html>
