--- a/contact/index.html
+++ b/contact/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html><head><title>Contact page</title><link rel= "stylesheet" href= "style.css"></head><body><h1>Hello, Contact here!</h1></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Contact page</title>
+    <style>
+      body {
+        background-color: blue;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Hello, Contact here!</h1>
+  </body>
+</html>
