--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<!DOCTYPE html><html><head><title>Homepage Client</title><link rel= "stylesheet" href= "style.css"></head><body><h1>Hello, World!</h1></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Homepage Client</title>
+    <style>
+      body {
+        background-color: pink;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Hello, World!</h1>
+  </body>
+</html>
